demo-projects/gitops-manifests/spring-demo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "-"
spec:
  ports:
  - port: 8080
    protocol: TCP
