demo-projects/gitops-manifests/spring-demo/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "-"
spec:
  ingressClassName: nginx
  rules:
  - host: spring-demo.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "-"
            port:
              number: 8080
